2005-03-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b32

	* Fix: Removed linebreak in translateable text.

	* Fix: Test for sending mail to new users failed, was sending anyway.

2005-03-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b31

	* Fix: Only try to watermark if the item isn't an album or a movie

2005-03-09  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b30

	* Updated Copyrights to 2005.

2005-03-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b29

	* Change: PhotoWorks URL needed updating

2005-03-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b28

	* Fix: Make sure that the 'Hey! Upload some photos!' link knows it's a popup

2005-03-06  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b27

	* Change: Add 'validate_albums.php' to assist with migration to
	  Gallery 2.0

	* Change: Add validate albums to the admin page

2005-03-03  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b26

	* Fix: Show "See full poll results" link only to admins and owners 
	       otherwise normal users get an errormessage.

2005-03-03  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b25

	* Fix: Ensure that mail is sent to 'other' users when adding a new
	  subalbum

2005-03-03  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b24

	* Fix: Revert jpk's change to lib/url.php - we have to use
	  GALLERY_MODULENAME instead of hardcoding 'com_gallery' because
	  it's possible to have more than one Gallery installed.

2005-03-03  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC2-cvs-b23

	* Change: Change .pcaption to inherit font-size when embedded.  
	  It was showing up too small when embedded, for some reason.

2005-03-02  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b22

	* Fix: Adjust skins:
	  - lilac
	  - paint
	  - slick
	
	Note: Now all standard skins shipped with Gallery are converted.

	* Text adjustments.

	* Added "return to admin-page" on tool pages.
