@@ -46,6 +46,7 @@ Find:
  </style>
 
 After add:
+ <link rel="stylesheet" href="modules/gallery/css/base.css.default" type="text/css">
  <link rel="stylesheet" href="modules/gallery/css/embedded_style.css.default" type="text/css">
 
 
