@@ -1,3 +1,14 @@
+2005-03-12  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b1
+
+	* Fix: Unset array ref in do_command
+
+	* Fix: Correct view album div sizes in situations where the thumbnail 
+	  size is zero or blank.
+
+	* Fix: session_test wasn't referencing 'destroy' from $_REQUEST
+
+	* Fix: Update phpBB instructions to include new CSS file
+
 2005-03-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC2-b32
 
 	* Fix: Removed linebreak in translateable text.
